frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: k8s-endoscope
spec:
    replicas: 2
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
            - name: frontend
              image: ahmedrafay888/frontend:latest
              ports:
                - name: web
                  containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: k8s-endoscope
spec:
  selector:
    app: frontend
  ports:
    - name: web
      port: 80
      targetPort: web
  type: LoadBalancer
