hub-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hub
    namespace: k8s-endoscope
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      containers:
      - name: hub
        image: ahmedrafay888/hub
        command: [ "./hub" ]
        args:
          - "-grpc_host=0.0.0.0"
          - "-grpc_port=50051"
          - "-ws_host=0.0.0.0"
          - "-ws_port=8085"
          # Uncomment and set below if you want to enable Kafka
          - "-kafka_broker=192.168.100.21:9095"
          - "-kafka_user=user1"
          - "-kafka_password=91Al7fEL7j"
          - "-kafka_topic=gotls-events"
        ports:
        - name: grpc
          containerPort: 50051
        - name: websocket
          containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: hub-service
  namespace: k8s-endoscope
spec:
  selector:
    app: hub
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
    - name: websocket
      port: 8085
      targetPort: websocket
  type: LoadBalancer
